[package]

name = "air"
version = "0.0.1"
authors = [ "Emerson Knapp <emerson.b.knapp@gmail.com>" ]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.sdl2]
version="0.29"
default-features=false
features = ["ttf","image","gfx","mixer"]

[dependencies.nalgebra]
version = "0.12"
features = ["serde-serialize"]
